# test2_esp_video_esphome

./: .gitignore  CAMERA_CONTROLS_YAML.md  CAMERA_ISSUES_ANALYSIS.md  CCM_QUICK_START.md  COMPARISON_M5STACK_VS_ESPHOME.md  CORRECTIONS_FRIGATE.md  DEBUG_RTSP.md  DEBUG_SENSOR_DETECTION.md  DEVICE_SELECTION_FIX.md  DIAGNOSTIC_CAMERA_ISSUES.md  DISABLE_FACE_DETECT_TEMPORARY.md  ESPHOME_CONFIG_REQUIRED.md  ESPHOME_FBS_LOADER_EXAMPLE.yaml  ESPHOME_PR7639_ISP_ANALYSIS.md  FIX_CRITICAL_FORCED_REBUILD.md  FIX_EXPOSURE_AND_FPS.md  FIX_WHITE_BALANCE_CONTRAST.md  FORCE_CLEAN_BUILD.sh  FRAMES_NOIRES_DIAGNOSTIC.md  FRIGATE_SETUP.md  H264_IMPLEMENTATION_GUIDE.md  ISP_PIPELINE_ARCHITECTURE.md  JPEG_HARDWARE_SOLUTION.md  LVGL_CAMERA_PAGES_GUIDE.md  LVGL_CAMERA_PAGE_OV02C10.yaml  LVGL_CAMERA_PAGE_OV5647.yaml  LVGL_CAMERA_PAGE_OV5647_800x600.yaml  LVGL_CAMERA_PAGE_SC202CS.yaml  LVGL_SETUP_REQUIRED.md  M5STACK_CAMERA_COMPARISON.md  M5STACK_OPTIMIZATIONS.md  M5STACK_PROFILING_GUIDE.md  MIGRATION_GUIDE.md  OV02C10_CUSTOM_FORMAT_ISSUES.md  OV5647_800x640_50FPS.md  OV5647_IMAGE_QUALITY_GUIDE.md  OV5647_SMOOTH_MOTION_FIX.md  PERFORMANCE_ANALYSIS.md  PPA_INVESTIGATION.md  PPA_OPTIMIZATION_TESTS.md  (+30 more)
components/camera_web_server/: README.md  __init__.py  camera_web_server.cpp  camera_web_server.h  idf_component.yml
components/depot_test/mipi_dsi_cam/: __init__.py  mipi_dsi_cam.cpp  mipi_dsi_cam.h  sensor_mipi_csi_ov5647.py
components/esp-dl/: LOCAL_INSTALL_README.md  idf_component.yml
components/esp_cam_sensor/: ADDING_SENSORS.md  CMakeLists.txt  __init__.py  idf_component  linker.lf  project_include.cmake
components/esp_cam_sensor/include/: esp_cam_sensor_detect.h  esp_cam_sensor_xclk.h
components/esp_cam_sensor/sensor/ov02c10/: ov02c10.c
components/esp_cam_sensor/sensor/ov5647/: ov5647.c
components/esp_cam_sensor/sensor/sc202cs/: Kconfig.sc202cs  sc202cs.c
components/esp_cam_sensor/sensor/sc202cs/include/private_include/: sc202cs_settings.h
components/esp_cam_sensor/src/: esp_cam_sensor_detect_stubs.c  esp_cam_sensor_detect_stubs_array.c
components/esp_cam_sensor/src/driver_cam/: esp_cam_ctlr_spi_cam.c
components/esp_h264/: CMakeLists.txt  __init__.py  idf_component
components/esp_h264/hw/src/: esp_h264_enc_single_hw.c
components/esp_h264/interface/include/: esp_h264_version.h
components/esp_h264/sw/include/: esp_h264_dec_sw.h
components/esp_ipa/: CMakeLists.txt  __init__.py  idf_component
components/esp_ipa/include/: esp_ipa.h  esp_ipa_types.h  esp_ipa_version.h
components/esp_ipa/src/: esp_ipa_detect_stubs.c  version.c
components/esp_sccb_intf/: CMakeLists.txt  __init__.py  idf_component
components/esp_sccb_intf/src/: sccb.c
components/esp_video/: CMakeLists.txt  __init__.py  esp_video_build.py  esp_video_component.cpp  esp_video_component.h  esphome_i2c_sccb_adapter.h  i2c_helper.h  idf_component
components/esp_video/deps /include/: esp_cam_sensor_xclk.h
components/esp_video/exemples/capture_stream/: sdkconfig.ci.disable_isp_video_device  sdkconfig.ci.driver_buf  sdkconfig.ci.user_buf
components/esp_video/exemples/simple_video_server/: README.md  sdkconfig.defaults
components/esp_video/include/: esp_video_init.h  esp_video_version.h
components/esp_video/private_include/: esp_video_version.h
components/esp_video/src/: embedded_ov02c10_ipa_config_json.c  embedded_ov5647_ipa_config_json.c  esp_video_init.c  esp_video_ioctl.c  esp_video_isp_pipeline.c  esp_video_isp_stubs.c  esp_video_sensor_stubs.c
components/esp_video/src/device/: esp_video_h264_device.c
components/esphome_fbs_loader/: CMakeLists.txt  README.md  __init__.py  esphome_fbs_loader.cpp  esphome_fbs_loader.h
components/human_face_detect/: CMakeLists.txt  README.md  SPIFFS_MODELS_README.md  __init__.py  human_face_detect.cpp  human_face_detect.h  human_face_detect_espdl.cpp  human_face_detect_espdl.h  idf_component.yml
components/human_face_detect/models/: download_and_pack.sh  human_face_detect.espdl  pack_model.py
components/human_face_detect/models/p4/: .gitignore  README.md
components/imlib/: CMakeLists.txt  USAGE_ESPHOME.md  __init__.py
components/imlib/include/: fmath.h  font.h  imlib.h
components/imlib/src/: draw.c  fmath.c  font.c  imlib.c
components/lvgl_camera_display/: __init__.py  lvgl_camera_display.cpp  lvgl_camera_display.h
components/mipi_dsi_cam/: CMakeLists.txt  CUSTOM_FORMATS_OV02C10.md  CUSTOM_FORMATS_OV5647.md  CUSTOM_FORMATS_SC202CS.md  PPA_HARDWARE_TODO.md  README_IMLIB.md  __init__.py  idf_component.yml  mipi_dsi_cam.cpp  mipi_dsi_cam.h  mipi_dsi_cam_ipa.h  mipi_dsi_cam_isp_config.h  number.py  ov02c10_custom_formats.h  ov5647_custom_formats.h  sc202cs_custom_formats.h  sensor_mipi_csi_sc202cs.py  sensor_mipi_csi_sc2336.py
components/network_init_guard/: README.md  __init__.py  network_init_guard.cpp  network_init_guard.h
components/rtsp_server/: CMakeLists.txt  README.md  __init__.py  example_esphome.yaml  example_frigate.yaml  idf_component.yml  rtsp_server.cpp  rtsp_server.h  rtsp_server_build.py
components/tab5_camera/: __init__.py  tab5_camera.cpp
components/test2_mipi_dsi_cam/: __init__.py  mipi_dsi_cam.cpp  mipi_dsi_cam.h
components/test_esp_video/: __init__.py
components/test_mipi_dsi_cam/: __init__.py  mipi_dsi_cam.cpp  mipi_dsi_cam.h
components/webrtc_camera/: README.md  __init__.py  example_config.yaml  idf_component.yml  test_rtp_receiver.py  webrtc_camera.cpp  webrtc_camera.h  webrtc_camera_build.py
esp-idf/: sdkconfig.defaults
