idf_component_register(
    SRCS 
        "src/esp_video.c"
        "src/esp_video_buffer.c"
        "src/esp_video_init.c"
        "src/esp_video_ioctl.c"
        "src/esp_video_mman.c"
        "src/esp_video_vfs.c"
        "src/esp_video_cam.c"
        "src/esp_video_isp_pipeline.c"
        "src/device/esp_video_csi_device.c"
        "src/device/esp_video_isp_device.c"
        "src/device/esp_video_jpeg_device.c"
        "src/device/esp_video_h264_device.c"
    INCLUDE_DIRS 
        "include"
        "include/linux"
        "include/sys"
        "private_include"
        "deps/include"
    PRIV_INCLUDE_DIRS
        "src"
        "src/device"
    REQUIRES
        driver
        esp_mm
        esp_timer
        esp_hw_support
        heap
        spi_flash
        vfs
)

# Flags de compilation
target_compile_definitions(${COMPONENT_LIB} PRIVATE
    CONFIG_ESP_VIDEO_ENABLE_MIPI_CSI_VIDEO_DEVICE=1
    CONFIG_ESP_VIDEO_ENABLE_ISP=1
    CONFIG_ESP_VIDEO_ENABLE_ISP_VIDEO_DEVICE=1
    CONFIG_ESP_VIDEO_ENABLE_ISP_PIPELINE_CONTROLLER=1
    CONFIG_ESP_VIDEO_USE_HEAP_ALLOCATOR=1
    CONFIG_ESP_VIDEO_ENABLE_HW_H264_VIDEO_DEVICE=1
    CONFIG_ESP_VIDEO_ENABLE_HW_JPEG_VIDEO_DEVICE=1
)
